Revert "fixed flip-card-back text overflow"
This reverts commit a6f872a8e9f50ccea693e249e6965637679cf134.

--- a/style.css
+++ b/style.css
@@ -741,15 +741,6 @@ button#scrolltopBtn {
   color:#000;
   transform: rotateY(180deg);
   padding: 20px;
-  
-  
-  scrollbar-width: none;  
-  overflow-y: scroll;
-
-}
-
-.flip-card-back::-webkit-scrollbar{
-        display: none;
 }
 img
 {
